--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "welll",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://kiszuriwalilibori.github.io/scheduler",
     "dependencies": {
         "@devexpress/dx-react-core": "^4.0.8",
         "@devexpress/dx-react-scheduler": "^4.0.8",
@@ -14,6 +15,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "firebase": "^10.13.0",
+        "gh-pages": "^6.1.1",
         "notistack": "^3.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -27,7 +29,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
