--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
             "components/*": ["components/*"],
             "hooks/*": ["hooks/*"],
             "store/*": ["store/*"],
-            "types/*": ["types/*"]
+            "types/*": ["types/*"],
+            "utils/*": ["utils/*"]
         }
     },
     "include": ["src"]
